Fix some spacing and max-width

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,7 +2,7 @@
   &::after {
     content: "";
     position: absolute;
-    bottom: -10%;
+    bottom: -8%;
     left: 0;
     height: 5rem;
     width: 100%;
